# evdev-switch

./: Cargo.toml  README.md  config.example.toml  evdev-switch.service
.github/workflows/: ci.yaml
src/: config.rs  main.rs
